Fix spacing

--- a/assets/css/minimalist.css
+++ b/assets/css/minimalist.css
@@ -13,7 +13,7 @@ html {
 }
 
 #gh {
-  margin-right: 10px;
+  margin-right: 50px;
 }
 
 /* Body */
